--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .App {
+  max-width: 728px;
+  margin: 4rem auto;
+}
+.App > h1 {
   text-align: center;
+  margin: 1rem 0;
+  color: orange;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Card {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  background: orange;
+  padding: 0.5rem 1rem;
+}
+.Card:not(:last-child) {
+  border-bottom: 1px solid, orange;
+}
+.Card--text h1 {
+  color: #0970b4;
+  text-transform: capitalize;
+}
+
+.Card--button {
+  padding: 0.4rem 1rem;
+  border-radius: 20px;
+  cursor: pointer;
+  background: #00aa69;
+  border: 1px solid #00aa69;
+  color: orange;
+  margin-right: 1rem;
+}
+.Form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  background: orange;
+  margin-bottom: 1rem;
+}
+
+.Form > div {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+}
+.Form input {
+  background: green;
+  padding: 0.5rem 1rem;
+  border: 1px solid #0970b4;
+  border-radius: 10px;
+  display: block;
+  margin: 0.3rem 1rem 0 0;
+  outline: none;
 }
 
-.App-link {
-  color: #61dafb;
+.Form button {
+  background: #099dff;
+  color: #fff;
+  padding: 0.5rem 1rem;
+  border-radius: 20px;
+  cursor: pointer;
+  border: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.line-through {
+  text-decoration: line-through;
+  color: black !important;
+}
+
+.hide-button {
+  display: none;
 }
