--- a/src/App.scss
+++ b/src/App.scss
@@ -51,19 +51,20 @@
   align-items: center;
 }
 .form input {
-  background: green;
-  padding: 0.5rem 1rem;
+  background: white;
+  padding: 1rem;
   border: 1px solid #0970b4;
   border-radius: 10px;
   display: block;
-  margin: 0.3rem 1rem 0 0;
+  margin: 1rem 0 0;
   outline: none;
+  width: 200px;
 }
 
 .form button {
   background: #099dff;
   color: #fff;
-  padding: 0.5rem 1rem;
+  padding: 10px;
   border-radius: 20px;
   cursor: pointer;
   border: none;
